force-app/main/default/objects/Path__c/Path__c.object-meta.xml
<CustomObject>
    <label>Path</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Path Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>