force-app/main/default/objects/Path__c/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
                <default>true</default>
                <label>application/json</label>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>text/html</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>