force-app/main/default/objects/Path__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200</fullName>
                <default>true</default>
                <label>200 OK</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>201 CREATED</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>202 ACCEPTED</label>
            </value>
            <value>
                <fullName>204</fullName>
                <label>204 NO_CONTENT</label>
            </value>
            <value>
                <fullName>206</fullName>
                <label>206 PARTIAL_CONTENT</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>300 MULTIPLE_CHOICES</label>
            </value>
            <value>
                <fullName>301</fullName>
                <label>301 MOVED_PERMANENTLY</label>
            </value>
            <value>
                <fullName>302</fullName>
                <label>302 FOUND</label>
            </value>
            <value>
                <fullName>304</fullName>
                <label>304 NOT_MODIFIED</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>400 BAD_REQUEST</label>
            </value>
            <value>
                <fullName>401</fullName>
                <label>401 UNAUTHORIZED</label>
            </value>
            <value>
                <fullName>403</fullName>
                <label>403 FORBIDDEN</label>
            </value>
            <value>
                <fullName>404</fullName>
                <label>404 NOT_FOUND</label>
            </value>
            <value>
                <fullName>405</fullName>
                <label>405 METHOD_NOT_ALLOWED</label>
            </value>
            <value>
                <fullName>406</fullName>
                <label>406 NOT_ACCEPTABLE</label>
            </value>
            <value>
                <fullName>409</fullName>
                <label>409 CONFLICT</label>
            </value>
            <value>
                <fullName>410</fullName>
                <label>410 GONE</label>
            </value>
            <value>
                <fullName>412</fullName>
                <label>412 PRECONDITION_FAILED</label>
            </value>
            <value>
                <fullName>413</fullName>
                <label>413 REQUEST_ENTITY_TOO_LARGE</label>
            </value>
            <value>
                <fullName>414</fullName>
                <label>414 REQUEST_URI_TOO_LARGE</label>
            </value>
            <value>
                <fullName>415</fullName>
                <label>415 UNSUPPORTED_MEDIA_TYPE</label>
            </value>
            <value>
                <fullName>417</fullName>
                <label>417 EXPECTATION_FAILED</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>500 INTERNAL_SERVER_ERROR</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>503 SERVER_UNAVAILABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>